--- a/.github/workflows/convert-and-sync.yml
+++ b/.github/workflows/convert-and-sync.yml
@@ -1,6 +1,6 @@
 name: Sync CNB PDF to 123Pan
 
-on:
+于:
   schedule:
     - cron: '0 */6 * * *'  # 每6小时检查
   workflow_dispatch:       # 手动触发
@@ -44,11 +44,53 @@ jobs:
         pass = $OBSCURED_PASS
         EOF
 
-    # 5. 上传到 123 云盘（清理旧文件）
-    - name: Upload to 123Pan
+    # 5. 上传并管理版本（保留最近2个，永不覆盖）
+    - name: Upload to 123Pan (Versioned)
       run: |
-        rclone mkdir "123pan:/Chemistry-Notes" || true
-        rclone delete "123pan:/Chemistry-Notes/" || true
-        rclone copy "chemistry-notes-pdf.zip" "123pan:/Chemistry-Notes/" --progress
-        echo "Upload completed!"
-        rclone ls "123pan:/Chemistry-Notes/"
+        # 安装和配置 rclone
+        curl https://rclone.org/install.sh | sudo bash
+        mkdir -p ~/.config/rclone
+        OBSCURED_PASS=$(rclone obscure "${{ secrets.WEBDAV_PASS }}")
+        cat > ~/.config/rclone/rclone.conf << EOF
+        [123pan]
+        type = webdav
+        url = ${{ secrets.WEBDAV_URL }}
+        vendor = other
+        user = ${{ secrets.WEBDAV_USER }}
+        pass = $OBSCURED_PASS
+        EOF
+        
+        REMOTE_DIR="123pan:/Chemistry-Notes"
+        TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+        VERSIONED_NAME="chemistry-notes-${TIMESTAMP}.zip"
+        
+        echo "Step 1: Uploading versioned file..."
+        rclone copy "chemistry-notes-pdf.zip" "$REMOTE_DIR/$VERSIONED_NAME" --progress
+        
+        # 验证上传成功
+        if ! rclone ls "$REMOTE_DIR/$VERSIONED_NAME" 2>/dev/null | grep -q "$VERSIONED_NAME"; then
+          echo "❌ Upload failed!"
+          exit 1
+        fi
+        
+        echo "Step 2: Updating latest link..."
+        # 删除旧的 latest，复制新的（原子操作）
+        rclone delete "$REMOTE_DIR/chemistry-notes-latest.zip" 2>/dev/null || true
+        rclone copy "$REMOTE_DIR/$VERSIONED_NAME" "$REMOTE_DIR/chemistry-notes-latest.zip"
+        
+        echo "Step 3: Cleaning old versions (keep last 2)..."
+        # 获取所有版本文件（排除 latest），按时间排序，删除旧的
+        rclone ls "$REMOTE_DIR" 2>/dev/null | \
+          grep "chemistry-notes-.*\.zip" | \
+          grep -v "latest" | \
+          sort -k2 | \
+          head -n -2 | \
+          awk '{print $2}' | \
+        while read oldfile; do
+          echo "Deleting old version: $oldfile"
+          rclone delete "$REMOTE_DIR/$oldfile" 2>/dev/null || true
+        done
+        
+        echo "✅ Upload completed!"
+        echo "Files on 123Pan:"
+        rclone ls "$REMOTE_DIR/"
